--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -18,9 +18,32 @@ a, a:hover {
 }
 
 
-/* .base-card {
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  background-color: red;
+.base-card {
+    background: #6C6C6C;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
   
-} */
+} 
+
+/* .base-input {
+    border-radius: 4px;
+    font-size: 1em;
+    letter-spacing: -0.015em;
+    background:#FEFEFE;
+    
+    height: 50px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+   
+  .base-input::placeholder {
+    color: #FEFEFE;
+    background: #FEFEFE;
+    
+  } */
+
+
+ 
+  
