--- a/frontweb/src/pages/Home/Login/styles.css
+++ b/frontweb/src/pages/Home/Login/styles.css
@@ -1,4 +1,46 @@
 .login-card {
-    border: 1px solid orange;
+    height: 573px;
     
+    padding: 44px;
+    font-size: 20px;
+
+
+}
+
+.login-card h1 {
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 65px;
+    text-align: center;
+    letter-spacing: -0.015em;
+
+    color: #FFFFFF;
+    margin-top: 75px;
+    margin-bottom: 35px;
+}
+
+/* .login-card input {
+    background:#FEFEFE;
+} */
+
+
+.base-input {
+  
+    font-size: 1em;
+    letter-spacing: -0.015em;
+   
+    height: 50px;
+    color: #9E9E9E;;
+    background: #FFFFFF;
+    border: 1px solid #E1E1E1;
+    border-radius: 4px;
+}
+
+.base-input::placeholder {
+    color: #9E9E9E;;
+}
+
+.login-submit {
+
+    margin-top: 75px;
 }
