--- a/frontweb/src/pages/Private/MoviesCatalog/styles.css
+++ b/frontweb/src/pages/Private/MoviesCatalog/styles.css
@@ -19,7 +19,9 @@
 
 .movie-content a {
     
-
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33px;
     letter-spacing: -0.015em;
 
     color: #FFFFFF;
@@ -30,4 +32,24 @@
 
 
 
+}
+
+@media (min-width: 320px) {
+    .movies-title-container h1 {
+       
+        letter-spacing: -0.015em;
+        font-size: 24px;
+       
+        
+    }
+}
+
+@media (min-width: 1200px) {
+    .movies-title-container h1 {
+       
+        letter-spacing: -0.015em;
+        font-size: 48px;
+       
+        
+    }
 }
