--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -7,12 +7,18 @@
 }
 
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 700;
     margin-bottom: 0;
 }
 
-a, a:hover {
+a,
+a:hover {
     text-decoration: none;
     color: unset;
 }
@@ -22,28 +28,14 @@ a, a:hover {
     background: #6C6C6C;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
-  
-} 
 
-/* .base-input {
-    border-radius: 4px;
-    font-size: 1em;
-    letter-spacing: -0.015em;
-    background:#FEFEFE;
-    
-    height: 50px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
 }
-   
-  .base-input::placeholder {
-    color: #FEFEFE;
-    background: #FEFEFE;
-    
-  } */
+
+.review-card {
+    background: #6C6C6C;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+}
 
 
- 
   
