--- a/frontweb/src/components/ButtonIcon/styles.css
+++ b/frontweb/src/components/ButtonIcon/styles.css
@@ -17,8 +17,10 @@
 .btn-container button {
     border-radius: 4px;
     width: 100%;
-   ;
-    
+    -webkit-border-radius: 14px;
+    -moz-border-radius: 14px;
+    -ms-border-radius: 14px;
+    -o-border-radius: 14px;
 }
 
 .btn h6 {
