--- a/frontweb/src/components/Navbar/styles.css
+++ b/frontweb/src/components/Navbar/styles.css
@@ -1,7 +1,7 @@
 .main-nav {
     min-height: 68px;
     padding: 0 49px;
-    
+
 }
 
 .nav-logo-text h4 {
@@ -11,6 +11,7 @@
     font-size: 24px;
     line-height: 33px;
     letter-spacing: -0.015em;
+    /* margin-right: 10px; */
 
 }
 
@@ -18,4 +19,62 @@
 a:hover {
     text-decoration: none;
     color: #000000;
+}
+
+
+
+.logout {
+    border: 1px solid #000000;
+    border-radius: 10px;
+    Width: 97.71px;
+    Height: 30px;
+    background: unset;
+    color: #000000;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+
+
+
+}
+
+.logout:hover {
+    text-decoration: none;
+    color: #ffff;
+    background-color: #898787;
+
+    
+     
+    
+}
+
+
+.nav-logo .logout {
+
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (min-width: 320px) {
+
+    .navbar .container-fluid {
+        display: flex;
+        flex-wrap: unset;
+
+    }
+
+    .main-nav {
+        
+        padding: unset;
+    
+    }
+
+    
+
+
+
 }
