--- a/frontweb/src/components/MovieCard/styles.css
+++ b/frontweb/src/components/MovieCard/styles.css
@@ -1,21 +1,23 @@
 .movie-card {
 
-    width: 258px;
+    width: auto;
     height: 322px;
     background: #6C6C6C;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
-    margin: 20px;
+    margin:  20px  ;
     padding: 0px;
+  
 }
 
 
-.card-top-container {
+.card-top {
     margin-top: 26px;
+    
 }
 
-.card-top-container img {
-    width: 258px;
+.card-top img {
+    width: 290px;
 }
 
 .card-bottom-container {
