--- a/frontweb/src/components/MovieFilter/styles.css
+++ b/frontweb/src/components/MovieFilter/styles.css
@@ -4,7 +4,7 @@
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     Height:80px;
-    padding: 15px 20px;
+    padding: 5px 20px;
    
 }
 
@@ -37,4 +37,54 @@
   .movie-filter-select__indicator-separator {
     display: none;
   }
-  
+
+
+
+  @media (min-width: 320px) {
+
+    .filter {
+        width: 300px;
+        height: 60px;
+    }
+  }
+
+  @media (min-width: 576px) {
+
+    .filter {
+        width: 536px;
+        height: 60px;
+    }
+  }
+
+  @media (min-width: 768px) {
+
+    .filter {
+        width: 688px;
+        height: 60px;
+    }
+  }
+
+
+  @media (min-width: 992px) {
+
+    .filter {
+        width: 912px;
+        height: 60px;
+    }
+  }
+
+  @media (min-width: 1200px) {
+
+    .filter {
+        width: 1119px;
+        height: 60px;
+    }
+  }
+
+  @media (min-width: 1400px) {
+
+    .filter {
+        width: 1165px;
+        height: 60px;
+    }
+  }
