wip Responsividade card List Movie

--- a/frontweb/src/pages/Private/MoviesCatalog/styles.css
+++ b/frontweb/src/pages/Private/MoviesCatalog/styles.css
@@ -1,5 +1,3 @@
-
-
 .movies-title-container h1 {
     margin-bottom: 39px;
     font-weight: 700;
@@ -13,7 +11,7 @@
 }
 
 .movie-content a {
-    
+
     font-weight: 400;
     font-size: 24px;
     line-height: 33px;
@@ -31,13 +29,30 @@
 
 @media (min-width: 320px) {
     .movies-title-container h1 {
-       
+
         letter-spacing: -0.015em;
         font-size: 24px;
-       
-        
+
+
     }
 }
+
+@media (min-width: 576px) {
+
+
+
+    .movie-card {
+        width: 238px ;
+    
+         
+    }
+
+    .movie-card  img {
+        width: 238px ;
+    
+    }
+}
+
 
 @media (min-width: 1200px) {
     .movies-title-container h1 {
