--- a/frontweb/src/components/MovieCard/styles.css
+++ b/frontweb/src/components/MovieCard/styles.css
@@ -5,8 +5,7 @@
     background: #6C6C6C;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
-    margin:  20px  ;
-    padding: 0px;
+    padding: 0;
   
 }
 
@@ -18,6 +17,7 @@
 
 .card-top img {
     width: 258px;
+    margin-top: 26px;
 }
 
 .card-bottom-container {
