--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -16,6 +16,11 @@ h6 {
     font-weight: 700;
     margin-bottom: 0;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
 a,
 a:hover {
